--- a/box/index.html
+++ b/box/index.html
@@ -17,5 +17,5 @@
     <p10128>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p10128>
     <br>
     <br>
-    <iframe name="time" src="http://127.0.0.1/time" height="200" width="200"></iframe>
+    <iframe name="time" src="/time" height="200" width="200"></iframe>
 </body>
