--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@ Send me an encrypted message
 </h27>
 <p>
 Note: encrypt the message with my public key BEFORE sending it in this form.
+</p> <br>
+
+<p>
+    (You can send an unencypted message as well, but it will be visible to anyone in the github repo for this site.)
 </p>
 
 
