--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ VjnnZizkmB0=
 Send me a message!
 </h>
 <div class="container">
-  <h1>FormSubmit Demo</h1>
+  <h1>Send me a message!</h1>
   <form target="_blank" action="https://formsubmit.co/16638fed6ffec9179feaa6a793dd26a2" method="POST">
     <div class="form-group">
       <div class="form-row">
